Select: fixed __container z-index

--- a/src/components/Select/Select.css
+++ b/src/components/Select/Select.css
@@ -31,6 +31,7 @@
     box-sizing: border-box;
     height: 44px;
     position: relative;
+    z-index: 2;
     }
 
   .Select select:disabled ~ .Select__container {
